--- a/templates/blog/about.html
+++ b/templates/blog/about.html
@@ -1,1 +1,6 @@
 {% extends 'base.html' %}
+{%  block content_block %}
+<h1>About this company</h1>
+<p>Thanks for checking it out!</p>
+
+{%  endblock %}
