--- a/templates/blog/post_confirm_delete.html
+++ b/templates/blog/post_confirm_delete.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content_block %}
+<form method="post">
+{% csrf_token %}
+<p>Are you sure want to delete {{ object }}?</p>
+<input type="submit" class="btn btn-danger" value="Confirm">
+</form>
+{% endblock %}
