--- a/templates/blog/post_form.html
+++ b/templates/blog/post_form.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content_block %}
+    <h1>New Post!</h1>
+    <form class="post-form" method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="save btn btn-dark" name="button">Save</button>
+    </form>
+    <script>
+    let editor=new MediumEditor('.editable');
+    </script>
+{% endblock %}
