--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -10,7 +10,7 @@
     {% endif %}
     <form action="{%  url 'login' %}" method="POST">
     {% csrf_token %}
-    {% form.as_p %}
+    {{form.as_p }}
     <input type="submit" class="btn btn-primary" value="login">
     <input type="hidden" name="next" value="{{ next }}">
 
