Template doesn't exist bug fixed by creating template in my app and then creating a directory named like my app and then adding my templates there and i also added it's path in template_dirs. Still have some bugs in adding comments!

--- a/my_blog/templates/my_blog/about.html
+++ b/my_blog/templates/my_blog/about.html
@@ -1,4 +1,4 @@
-{% extends 'my_blog/../base.html' %}
+{% extends 'my_blog/../my_blog/base.html' %}
 {% load static %}
 {%  block content_block %}
 <h1>About this company</h1>
