--- a/my_blog/templates/my_blog/post_confirm_delete.html
+++ b/my_blog/templates/my_blog/post_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends 'my_blog/../base.html' %}
+{% extends 'my_blog/../my_blog/base.html' %}
 {% block content_block %}
 <form method="post">
 {% csrf_token %}
