--- a/my_blog/templates/my_blog/post_detail.html
+++ b/my_blog/templates/my_blog/post_detail.html
@@ -1,4 +1,4 @@
-{% extends 'my_blog/../base.html' %}
+{% extends 'my_blog/../my_blog/base.html' %}
 {% block content_block %}
     <h1 class="posttitle loader">{{ post.title }}</h1>
     {% if post.published_date %}
