--- a/my_blog/templates/my_blog/post_draft_list.html
+++ b/my_blog/templates/my_blog/post_draft_list.html
@@ -1,4 +1,4 @@
-{% extends 'my_blog/../base.html' %}
+{% extends 'my_blog/../my_blog/base.html' %}
 {% block content_block %}
      {% for post in posts %}
     <div class="post">
