--- a/my_blog/templates/my_blog/post_form.html
+++ b/my_blog/templates/my_blog/post_form.html
@@ -1,4 +1,4 @@
-{% extends 'my_blog/../base.html' %}
+{% extends 'my_blog/../my_blog/base.html' %}
 {% block content_block %}
     <h1>New Post!</h1>
     <form class="post-form" method="POST">
