--- a/my_blog/templates/registration/login.html
+++ b/my_blog/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends 'my_blog/../my_blog/../base.html' %}
+{% extends 'my_blog/../my_blog/../my_blog/base.html' %}
 {% block content_block %}
     <div class="jumbotron">
         <h2>Please Login :</h2>
