--- a/my_blog/templates/my_blog/comment_form.html
+++ b/my_blog/templates/my_blog/comment_form.html
@@ -1,7 +1,7 @@
 {% extends 'my_blog/../my_blog/base.html' %}
 {% block content_block %}
 <h1>New Comment</h1>
-    <form class="post-form" method="post">
+    <form class="post-form" method="POST">
     {% csrf_token %}
     {{ form.as_p}}
     <button type="submit" class="save btn btn-dark">Post Comment</button>
