--- a/my_blog/templates/my_blog/post_detail.html
+++ b/my_blog/templates/my_blog/post_detail.html
@@ -8,7 +8,7 @@
     {% else %}
         <a class="btn btn-dark" href="{% url 'post_publish ' pk=post.pk %}">Publish</a>
     {% endif %}
-    <p class="postcontent">{{ post.title|safe|linebreaksbr }}</p>
+    <p class="postcontent">{{ post.text|safe|linebreaksbr }}</p>
     {% if user.is_authenticated %}
         <a class="btn btn-primary" href="{% url 'post_edit' pk=post.pk %}">edit</a>
         <a class="btn btn-primary" href="{% url 'post_remove' pk=post.pk %}">remove</a>
